<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="6dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSubjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_subject_name"
            style="@style/AppText.Subtitle"/>

        <LinearLayout
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/AppText.Small"
                android:layout_weight="1"
                android:text="@string/expenses_events" />

            <TextView
                android:id="@+id/tvPlanned"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppText.Small"
                android:gravity="end"
                android:text="@string/expenses_plan" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvRealized"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            style="@style/AppText.Small"
            android:text="@string/expenses_real" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
