<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_month"
            style="@style/AppText.Subtitle"
            android:paddingBottom="4dp"/>

        <TextView
            android:id="@+id/tvPlanned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenses_plan_label"
            style="@style/AppText.Small"
            android:paddingBottom="2dp"/>

        <TextView
            android:id="@+id/tvRealized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenses_real_label"
            style="@style/AppText.Small"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
