<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilName"
            android:hint="@string/field_name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.App.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Marca (solo para cars) -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilBrand"
            android:hint="@string/field_brand"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.App.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etBrand"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Modelo (solo para cars) -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilModel"
            android:hint="@string/field_model"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.App.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etModel"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Fecha de nacimiento (solo para pets) -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilBirth"
            android:hint="@string/field_birth_date"
            android:visibility="gone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBirth"
                style="@style/Widget.App.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilMeasure"
            android:hint="@string/field_measure"
            android:inputType="numberDecimal">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.App.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etMeasure"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilNotes"
            android:hint="@string/field_notes"
            android:inputType="textMultiLine"
            android:minLines="3">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.App.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNotes"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>



